--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">MopApp</string>
+    <string name="txt_mi_search">Search</string>
+    <string name="txt_mi_add">Add</string>
+    <string name="txt_lbl_mop">Mop</string>
+    <string name="txt_lbl_clou" >Clou</string>
+    <string name="txt_btn_save">Save</string>
 </resources>
